[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/SocketHelper.gd" type="Script" id=2]
[ext_resource path="res://Scripts/VTSAPIMessageConstructor.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ConfigHelper.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SocketHelper" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TVTSAPIMessageConstructor" type="Node" parent="."]
script = ExtResource( 3 )

[node name="ConfigHelper" type="Node" parent="."]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 3

[node name="VTSLabel" type="Label" parent="CanvasLayer/GridContainer"]
margin_right = 150.0
margin_bottom = 14.0
text = "VTS Mouse Range"

[node name="VTSMin" type="Label" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_right = 220.0
margin_bottom = 14.0
text = "Min Pixels"

[node name="VTSMax" type="Label" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_right = 292.0
margin_bottom = 14.0
text = "Max Pixels"

[node name="VTSX" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 32.0
text = "X"

[node name="VTSMinX" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 18.0
margin_right = 220.0
margin_bottom = 32.0
text = "0"

[node name="VTSMaxX" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 18.0
margin_right = 292.0
margin_bottom = 32.0
text = "3840"

[node name="VTSY" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 50.0
text = "Y"

[node name="VTSMinY" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 36.0
margin_right = 220.0
margin_bottom = 50.0
text = "0"

[node name="VTSMaxY" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 36.0
margin_right = 292.0
margin_bottom = 50.0
text = "1080
"

[node name="CustomLabel" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 68.0
text = "Custom Mouse Range 1"

[node name="CustomMin" type="Label" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 54.0
margin_right = 220.0
margin_bottom = 68.0
text = "Min"

[node name="CustomMax" type="Label" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 54.0
margin_right = 292.0
margin_bottom = 68.0
text = "Max"

[node name="CustomX" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 72.0
margin_right = 150.0
margin_bottom = 86.0
text = "X"

[node name="CustomMinX" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 72.0
margin_right = 220.0
margin_bottom = 86.0
text = "0"

[node name="CustomMaxX" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 72.0
margin_right = 292.0
margin_bottom = 86.0
text = "1920"

[node name="CustomY" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 90.0
margin_right = 150.0
margin_bottom = 104.0
text = "Y"

[node name="CustomMinY" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 90.0
margin_right = 220.0
margin_bottom = 104.0
text = "0"

[node name="CustomMaxY" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 90.0
margin_right = 292.0
margin_bottom = 104.0
text = "1080
"

[node name="CustomLabel2" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 122.0
text = "Custom Mouse Range 2"

[node name="CustomMin2" type="Label" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 108.0
margin_right = 220.0
margin_bottom = 122.0
text = "Min"

[node name="CustomMax2" type="Label" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 108.0
margin_right = 292.0
margin_bottom = 122.0
text = "Max"

[node name="CustomX2" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 126.0
margin_right = 150.0
margin_bottom = 140.0
text = "X"

[node name="CustomMinX2" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 126.0
margin_right = 220.0
margin_bottom = 140.0
text = "1920
"

[node name="CustomMaxX2" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 126.0
margin_right = 292.0
margin_bottom = 140.0
text = "3840"

[node name="CustomY2" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 144.0
margin_right = 150.0
margin_bottom = 158.0
text = "Y"

[node name="CustomMinY2" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 154.0
margin_top = 144.0
margin_right = 220.0
margin_bottom = 158.0
text = "0"

[node name="CustomMaxY2" type="TextEdit" parent="CanvasLayer/GridContainer"]
margin_left = 224.0
margin_top = 144.0
margin_right = 292.0
margin_bottom = 158.0
text = "1080
"
